# rz-frida

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  linter.yml
.reuse/: dep5
plugin/cutter/: CMakeLists.txt
plugin/cutter/src/: FridaPlugin.cpp  FridaPlugin.h
plugin/rizin/: meson.build
plugin/rizin/agent/: .eslintrc.json  embed_agent.py  entry.js  package.json  rzfrida_agent.js
plugin/rizin/include/: rz_frida.h
plugin/rizin/src/: rz_frida_backend.c  rz_frida_backend_null.c  rz_frida_message.c  rz_frida_plugin.c  rz_frida_protocol.c  rz_frida_session.c  rz_frida_uri.c  rzfrida_agent.h
plugin/rizin/src/cmd_descs/: cmd_descs.c  cmd_descs.h  cmd_descs.yaml
plugin/rizin/tests/: minunit.h  test_agent.js  test_backend.c  test_message.c  test_plugin.c  test_protocol.c  test_session.c  test_uri.c
